// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | PageWrapper PageWrapper 1`] = `
.c1 {
  padding-top: 16px;
  padding-bottom: 16px;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  box-sizing: border-box;
  margin: 0 auto;
}

@media (min-width:736px) {
  .c0 {
    max-width: 736px;
    padding: 0 8px;
  }
}

@media (min-width:952px) {
  .c0 {
    max-width: 952px;
    padding: 0 8px;
  }
}

@media (min-width:1268px) {
  .c0 {
    max-width: 1268px;
    padding: 0 8px;
  }
}

@media (min-width:1576px) {
  .c0 {
    max-width: 1576px;
    padding: 0 8px;
  }
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        Page contents inside the PageWrapper can be anything.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | PageWrapper PageWrapper with a custom background 1`] = `
.c2 {
  padding-top: 16px;
  padding-bottom: 16px;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  background-color: #F5F5F5;
}

.c1 {
  box-sizing: border-box;
  margin: 0 auto;
}

@media (min-width:736px) {
  .c1 {
    max-width: 736px;
    padding: 0 8px;
  }
}

@media (min-width:952px) {
  .c1 {
    max-width: 952px;
    padding: 0 8px;
  }
}

@media (min-width:1268px) {
  .c1 {
    max-width: 1268px;
    padding: 0 8px;
  }
}

@media (min-width:1576px) {
  .c1 {
    max-width: 1576px;
    padding: 0 8px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Page contents inside the PageWrapper can be anything.
      </span>
    </div>
  </div>
</div>
`;
